app/assets/css/main.css
/* ... */
.btn {
    font-weight: bold;
    text-shadow: 1px 1px rgba(0,0,0,0.2);
    border: none;
    margin-top: 10px;
}

.btn-default {
    text-shadow: none;
}

/* Flags */

.flag-select {
	padding: 50% 0;
}

.flag-select h3 {
	margin: 0;
}

.flag-select li a {
	line-height: 50px;
	padding: 10px 20px;
	color: #898989;
}

.flag-select img {
	margin-right: 20px;
	border-radius: 100px;
	border: 5px solid #DBDBDB;
}

.flag-select a:hover {
	background-color: #ff6c3c !important;
	color: #fff;
}

.flag-select a:hover img {
	border: 5px solid #FFF;
}

.navbar-right {
    margin-right: 0;
}

#menu-toggle {
    display: none;
}

.dropdown input {
    display: none;
}

.dropdown label {
    color: #FFF;
}

.dropdown:hover label {
    color: #333;
}

.navbar-default .navbar-nav>li>label {
    color: #FFF;
    background-color: #313131;
    height: 55px;
    border-left: 1px solid #505050;
    padding: 0 30px;
    line-height: 55px;
    min-width: 115px;
}

.navbar-nav li>input:checked ~ .dropdown-menu {
    display: block !important;
}

.navbar-nav li>input:checked + label {
    background: #fff;
    color: #313131;
}

@media (max-width: 768px) {
    .main-content {
        padding: 20px;
    }
	.box-green {
		margin-left: -30px;
		margin-right: -30px;
	}

	.navbar-default .navbar-nav > li > a {
		margin-left: 0;
		margin-right: 0;
	}
}

@media (max-width: 600px) {
	.bottom-boxes h2 {
		font-size: 22px;
		display: block;
		text-align: right;
	}

	/* Responsive Tables, using Kelly Cook's technique */
	table {
	    display: block;
	    width: 100%;
	}

    thead, tbody, th, td, tr {
        display: block;
    }

    /* Hide table headers (but not display: none;, for accessibility) */
    thead tr {
        position: absolute;
        top: -9999px;
        left: -9999px;
    }

    tr {
        margin: 0 0 1em;
    }

    tr:nth-child(odd) {
        background: #fcfcfc;
    }

    td {
        /* Behave  like a "row" */
        border: none;
        position: relative;
        padding: 1em 0;
        padding-left: 50%;
    }

   	td:before {
    	content: attr(data-label);
        padding: 1em 0 1em 1em;
        /* Now like a table header */
        position: absolute;
        font-weight: bold;
        top: 0;
        left: 0;
        width: 45%;
        white-space: nowrap;
    }

}

@media (max-width: 480px) {
	.bottom-boxes {
		padding: 80px 0;
	}

	.bottom-boxes h2 {
		font-size: 22px;
		display: block;
		text-align: right;
	}

	.hide-breaks {
		text-align: center;
	}
}

@media (max-width: 991px) {
	.box-green .left-border {
		border-left: none;
	}

	.box-green .right-border {
		border-right: none;
	}
	.left-pad {
		padding-left: 0;
	}
	.box-green .inside {
		padding-top: 30px;
		padding-bottom: 30px;
		max-height: 230px;
	}
	.info-boxes .col-md-3 {
		text-align: center;
		padding-bottom: 30px;
	}
	.bottom-boxes {
		padding : 0;
	}
	.bottom-boxes p {
		max-width: none;
	}
	.monero-info, .monero-news {
		padding-right: 5px !important;
	}
	.monero-info {
		padding-bottom: 40px;
	}
	.info-boxes h2  {
		font-size: 18px;
	}
	.lower-list h2  {
		font-size: 24px;
		display: block;
	}
	.lower-list .icon {
		display: block;
	}
	.lower-list {
		padding: 0;
	}
	.purple br {
		display: block;
	}
	.footer p {
		color: #fff;
		font-size: 14px;
	}
	.flag-select {
		padding: 5% 0;
	}

}

@media (min-width: 991px) and (max-width: 1200px) {
	
	.box-green .inside {
		height: 300px;
		margin-bottom: 0;
	}

	.monero-news, .monero-info {
		padding-right: 0 !important;
	}

}

@media (max-width: 1200px) {

	/* Nav Color Resets */

	.navbar-default .yellow {
		border-left: 3px solid #ffe00a !important;
		border-top: none;
	}

	.navbar-default .purple {
		border-left: 3px solid #6b0072 !important;
		border-top: none;
	}

	.navbar-default .red {
		border-left: 3px solid #ff4f41 !important;
		border-top: none;
	}

	.navbar-default .orange {
		border-left: 3px solid #ff6c3c !important;
		border-top: none;
	}

	.navbar-default .softyellow {
		border-left: 3px solid #ffd781 !important;
		border-top: none;
	}

	.navbar-default .green {
		border-left: 3px solid #5b9a6f !important;
		border-top: none;
	}

	.icon-large {
		font-size: 80px;
	}
	.navbar-header {
		float: none;
	}
	.navbar-left,.navbar-right {
		float: none !important;
	}
	.navbar-toggle {
		display: block;
	}
	.navbar-collapse {
		box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
	}
	.navbar-fixed-top {
		top: 0;
		border-width: 0 0 1px;
	}
	.navbar-collapse.collapse {
		display: none!important;
	}
	.navbar-nav {
		float: none!important;
		margin-top: 7.5px;
	}
	.navbar-nav>li {
		float: none;
	}
	.navbar-nav>li>a {
		padding-top: 10px;
		padding-bottom: 10px;
	}
	.collapse.in{
		display:block !important;
	}

	.navbar-default .navbar-nav > li > a {
		margin-left: 15px;
		text-align: left;
	}
	
	.navbar-wrapper {
		width: 100%;
	}

	.navbar {
		background: #313131;
		border-bottom: 5px solid #505050;
		height: 60px;
		font-weight: bold;
		margin: 0;
	}

	.hide-breaks br {
		display: none;
	}

	.box-green .inside {
		padding-top: 20px;
	}

	.navbar-default .navbar-toggle {
		border-color: #fff;
		border-radius: 0;
	}

	.navbar-nav.navbar-right:last-child {
	}

	/* Icons */

	.icon {
		float: left;
		padding-right: 20px;
	}

	.lower-list-content .icon {
		padding-right: 10px;
		margin-top: -15px;
		margin-left: -60px;
	}

	.green-icon {
		max-width:100% !important;
		height:auto;
		display:inline;
	}

	/* Buttons */

	.btn-grey {
		background: #505050;
	}

	.full-width {
		width: 100%;
	}

}

@media (max-width: 400px) {
	.download-links span {
		display: block;
	}
	.download-links {
		text-align: center;
	}
	.download-links .pull-right {
		float: none !important;
	}
	.other-links br {
		display: block;
	}
}

@media (max-width: 380px) {
	.footer img {
		display: none;
	}
	.lower-list h2 {
		text-align: right;
	}
}
/* ... */

